// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayerControls > matches the snapshot 1`] = `
"<div class="playerControls"><button class="iconButton" type="button" title="Switch shuffle off">
    <phshuffle class="icon" aria-hidden="true" size="24" weight="duotone" color="currentColor"></phshuffle><span class="text visually-hidden">Switch shuffle off</span>
  </button><button class="iconButton disabled" disabled="" type="button" title="Previous track">
    <phskipback class="icon" aria-hidden="true" size="24" weight="duotone"></phskipback><span class="text visually-hidden"> Previous track </span>
  </button>
  <!--v-if-->
  <div class="playPauseButton"><span><span class="loader"></span><span class="visually-hidden">Loading data</span></span></div>
  <!--v-if--><button class="iconButton disabled" disabled="" type="button" title="Next track">
    <phskipforward class="icon" aria-hidden="true" size="24" weight="duotone"></phskipforward><span class="text visually-hidden"> Next track </span>
  </button><button class="iconButton" type="button" title="Turn on repeat all.">
    <phrepeat class="icon" aria-hidden="true" size="24" weight="duotone" color="currentColor"></phrepeat><span class="text visually-hidden">Turn on repeat all.</span>
  </button>
</div>"
`;

exports[`PlayerControls > when isPodcast is true > matches the snapshot 1`] = `
"<div class="playerControls">
  <!--v-if--><button class="iconButton disabled" disabled="" type="button" title="Previous track">
    <phskipback class="icon" aria-hidden="true" size="24" weight="duotone"></phskipback><span class="text visually-hidden"> Previous track </span>
  </button><button class="iconButton" type="button" title="Rewind back 10 seconds">
    <phrewind class="icon" aria-hidden="true" size="24" weight="duotone"></phrewind><span class="text visually-hidden">Rewind back 10 seconds</span>
  </button>
  <div class="playPauseButton"><span><span class="loader"></span><span class="visually-hidden">Loading data</span></span></div><button class="iconButton" type="button" title="Fast forward back 30 seconds">
    <phfastforward class="icon" aria-hidden="true" size="24" weight="duotone"></phfastforward><span class="text visually-hidden">Fast forward back 30 seconds</span>
  </button><button class="iconButton disabled" disabled="" type="button" title="Next track">
    <phskipforward class="icon" aria-hidden="true" size="24" weight="duotone"></phskipforward><span class="text visually-hidden"> Next track </span>
  </button>
  <!--v-if-->
</div>"
`;

exports[`PlayerControls > when isRadioStation is true > matches the snapshot 1`] = `
"<div class="playerControls">
  <!--v-if--><button class="iconButton disabled" disabled="" type="button" title="Previous track">
    <phskipback class="icon" aria-hidden="true" size="24" weight="duotone"></phskipback><span class="text visually-hidden"> Previous track </span>
  </button>
  <!--v-if-->
  <div class="playPauseButton"><span><span class="loader"></span><span class="visually-hidden">Loading data</span></span></div>
  <!--v-if--><button class="iconButton disabled" disabled="" type="button" title="Next track">
    <phskipforward class="icon" aria-hidden="true" size="24" weight="duotone"></phskipforward><span class="text visually-hidden"> Next track </span>
  </button>
  <!--v-if-->
</div>"
`;
